# docker-rclone-serve

./: .dockerignore  Dockerfile  auth-proxy.py  readme.md  renovate.json
.github/workflows/: build_image.yaml
auth-proxy/: auth-proxy.py  pyproject.toml  requirements.txt
