[tool.poetry]
name = "auth-proxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.4"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
